--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
-  <script defer src="src/js/index.js"></script>
+  <script type="module" defer src="src/js/index.js"></script>
   <link rel="stylesheet" href="src/css/styles.css">
 </head>
 
