--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
-  <script type="module" defer src="src/js/index.js"></script>
-  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="./src/css/styles.css">
+  <script type="module" defer src="./src/js/index.ts"></script>
 </head>
 
 <body class="flex f-cen">
