add:search, list

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
-  <link rel="stylesheet" href="./src/css/styles.css">
-  <script type="module" defer src="./src/js/index.ts"></script>
+  <script type="module" defer src="./src/js/app.ts"></script>
 </head>
 
 <body class="flex f-cen">
@@ -36,6 +35,23 @@
   </div>
 
 
+  <div id="search-container" class="hidden flex f-cen">
+    <input type="text" id="search-input" placeholder="Music doesn't sound musical %?...">
+    <button id="search-button">Search</button>
+  </div>
 </body>
+
+
+<div id="list-container" class="">
+
+  <div class="list-item flex">
+    <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt="">
+    <div class="flex f-col ">
+      <h3>Tujhe Bhula Diya</h3>
+      <p>Mohit Chauhan...</p>
+    </div>
+  </div>
+
+</div>
 
 </html>
