new: history feature

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </audio>
   </div>
 
+  <div id="list-container" class=""></div>
 
-  <div id="list-container" class="">
+  <button id="btn-next">Load More</button>
+  <button id="btn-history">History</button>
 
-
-  </div>
-  <button id="load-more">Load More</button>
+  <div id="history-container" class=""></div>
 </body>
 
 </html>
