--- a/index.html
+++ b/index.html
@@ -6,46 +6,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
   <script type="module" defer src="./src/js/app.ts"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./dist/output.css">
 </head>
 
-<body>
-  <header class="flex f-cen">
-    <form id="search-container" class="flex f-cen">
-      <input type="text" id="search-input" placeholder="Music doesn't sound musical %?...">
-      <button id="search-button">Search</button>
+<body class="min-h-screen flex flex-col bg-body text-white">
+
+  <header class="flex justify-center items-center h-20 bg-body ">
+    <form id="search-container" class="flex flex-row items-center bg-gray text-white rounded-full">
+      <input type="text" id="search-input" placeholder="Music doesn't sound musical %?..."
+        class="px-4 py-2 w-72 bg-gray rounded-full focus:outline-none">
+
+      <button id="search-button"
+        class="px-4 py-2 rounded-full focus:outline-none bg-red bg-hover-red bg-active-red p-4 transition duration-300 cursor-pointer">
+        Search
+      </button>
     </form>
+
+    <button id="btn-history"
+      class="absolute right-4 bg-red hover:bg-red-hover text-white py-2 px-4 rounded-full focus:outline-none">
+      History
+    </button>
   </header>
 
-  <div id="track" class="flex f-col f-cen">
 
-    <div id="track-art" class="flex">
+  <main class="flex-grow p-8 pt-2">
 
-      <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt="">
-      <div id="track-metadata" class="flex f-col f-cen">
-        <h3>Tujhe Bhula Diya</h3>
-        <p>Mohit Chauhan...</p>
+    <div id="list-container" class="grid grid-cols-3 gap-4"></div>
+
+    <button id="btn-next">Load More</button>
+    <button id="btn-history">History</button>
+
+    <div id="history-container" class=""></div>
+
+  </main>
+  <footer
+    class="fixed bottom-0 border-t-2 border-red w-full bg-body grid gap-4 grid-flow-row-dense lg:grid-cols-4 place-items-center justify-items-start px-8 py-3">
+
+    <div id="track-art" class="flex items-center col-span-1">
+      <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
+        class="w-20 h-20 rounded-lg">
+      <div id="track-metadata" class="ml-4">
+        <h3 class="text-lg font-semibold">Tujhe Bhula Diya</h3>
+        <p class="w-52 text-gray-600">Mohit Chauhan, Pritam, Sunidhi Chauhanfd</p>
       </div>
-
     </div>
 
-    <div id="custom-seekbar" class="flex f-cen">
-      <button id="play-pause">▶</button>
-      <div id="elapsed-time">00:00</div>
-      <input id="seekbar" type="range" min="0" value="0">
-      <div id="total-time">4:41</div>
+    <div id="custom-seekbar"
+      class="flex items-center justify-around bg-opacity-10 bg-gray w-full h-8 rounded-full px-4 col-span-3">
+      <button id="play-pause" class="w-6 mr-2 material-icons text-gray-300">play_circle_outline</button>
+      <div id="elapsed-time" class="">00:00</div>
+      <input id="seekbar" type="range" min="0" value="0"
+        class="relative h-1 bg-red w-full m-4 rounded-full cursor-pointer">
+      <div id="total-time" class="">4:41</div>
     </div>
+  </footer>
 
-    <audio src="https://aac.saavncdn.com/664/c71ac17cd40718ab5371a9d8d86b8bcc_320.mp4">
-      Your browser does not support the audio format.
-    </audio>
-  </div>
-
-  <div id="list-container" class=""></div>
-
-  <button id="btn-next">Load More</button>
-  <button id="btn-history">History</button>
-
-  <div id="history-container" class=""></div>
+  <audio src="https://aac.saavncdn.com/664/c71ac17cd40718ab5371a9d8d86b8bcc_320.mp4">
+    Your browser does not support the audio format.
+  </audio>
 </body>
 
 </html>
