--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="./dist/output.css">
 </head>
 
-<body class="min-h-screen flex flex-col bg-body text-white">
+<body class="min-h-screen bg-body text-white">
 
-  <header class="flex justify-between items-center h-20 bg-body px-8">
+  <header class="fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
     <button id="btn-history" class="bg-red active:bg-red-hover text-white py-2 px-3 focus:outline-none">
       History
     </button>
@@ -27,16 +27,16 @@
     <button id="btn-next" class="bg-red active:bg-red-hover text-white py-2 px-4 focus:outline-none">
       Next
     </button>
-
   </header>
 
 
-  <main class="flex-grow p-8 pt-2">
+  <main class="p-6 py-24">
     <div id="list-container" class="grid grid-cols-3 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
   </main>
+
   <footer
-    class="fixed bottom-0 border-t-2 border-red w-full bg-body grid gap-4 grid-flow-row-dense lg:grid-cols-4 place-items-center justify-items-start px-8 py-3">
+    class="fixed bottom-0 h-20 mt-20 border-t-2 border-red w-full bg-body grid gap-4 grid-flow-row-dense lg:grid-cols-4 place-items-center justify-items-start px-8 py-2 ">
 
     <div id="track-art" class="flex items-center col-span-1">
       <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
