--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       History
     </button>
 
-    <form id="search-container" class="flex flex-row items-center bg-gray text-white rounded-br-full rounded-tl-full">
+    <form id="search-container" class="flex flex-row items-center bg-gray text-white  ">
       <input type="text" id="search-input" placeholder="Music doesn't sound musical %?..."
-        class="pl-6 py-2 w-72 bg-gray  rounded-br-full rounded-tl-full focus:outline-none">
-      <input type="submit" id="search-button"
-        class="bg-red active:bg-red-hover text-white py-2 px-4 focus:outline-none rounded-br-full rounded-tl-full">
+        class="pl-6 py-2 w-72 bg-gray focus:outline-none">
+      <input type="submit" id="search-button" value="Search"
+        class="bg-red active:bg-red-hover cursor-pointer text-white py-2 px-4 focus:outline-none">
     </form>
 
     <button id="btn-next" class="bg-red active:bg-red-hover text-white py-2 px-4 focus:outline-none">
@@ -48,7 +48,7 @@
     </div>
 
     <div id="custom-seekbar"
-      class="flex items-center justify-around bg-opacity-10 bg-gray w-full h-8 px-4 col-span-3 rounded-br-full rounded-tl-full">
+      class="flex items-center justify-around bg-opacity-10 bg-gray w-full h-8 px-4 col-span-3  ">
       <button id="play-pause" class="w-6 mr-2 material-icons text-gray-300">play_circle_outline</button>
       <div id="elapsed-time" class="">00:00</div>
       <input id="seekbar" type="range" min="0" value="0"
