fix: critical: custom url

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <form id="search-container" class="flex flex-row items-center bg-gray text-white  ">
       <input type="text" id="search-input" placeholder="Music doesn't sound musical %?..."
-        class="pl-6 py-2 w-72 bg-gray focus:outline-none">
+        class="pl-6 py-2 w-72 bg-gray focus:outline-none ">
       <input type="submit" id="search-button" value="Search"
-        class="bg-red active:bg-red-hover cursor-pointer text-white py-2 px-4 focus:outline-none">
+        class="border-red border-l-2 active:bg-red cursor-pointer text-white py-2 px-4 focus:outline-none">
     </form>
 
     <button id="btn-next" class="bg-red active:bg-red-hover text-white py-2 px-4 focus:outline-none">
