--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
   <script type="module" defer src="./src/js/app.ts"></script>
+  <link rel="stylesheet" href="./src/output.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="min-h-screen bg-body text-white">
 
   <header class="sm:fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
-    <button id="btn-history" class="bg-red text-white active:bg-red-hover  py-2 px-3 focus:outline-none">
-      History
+    <button id="btn-history" class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none">
+      history
     </button>
 
     <form id="search-container" class="flex flex-row items-center bg-gray text-white  ">
-      <input autofocus type="text" id="search-input" placeholder="Music doesn't sound musical %?..."
-        class="pl-6 py-2 w-72 bg-gray focus:outline-none">
-      <input type="submit" id="search-button" value="Search"
-        class="active:bg-red bg-red text-white cursor-pointer py-2 px-4 focus:outline-none">
+      <input autofocus type="text" id="search-input" placeholder="search ig?"
+        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-none">
+      <button type="submit" id="search-button" value="Search"
+        class="active:bg-red bg-red text-white cursor-pointer py-2 px-4 focus:outline-none material-icons text-[20px]">
+        search
+      </button>
     </form>
 
     <button id="btn-next" class="bg-red text-white active:bg-red-hover py-2 px-4 focus:outline-none">
-      Next
+      next
     </button>
   </header>
 
 
-  <main class="p-6 sm:pt-[6.25rem] sm:pb-28 pb-40">
+  <main class="p-6 sm:pt-[6.5rem] sm:pb-28 pb-40">
     <div id="list-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
   </main>
