--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body class="min-h-screen bg-body text-white">
 
   <header class="sm:fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
-    <button id="btn-history" class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none">
+    <button id="btn-history" class="bg-red focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none">
       history
     </button>
 
-    <form id="search-container" class="flex flex-row items-center bg-gray text-white  ">
-      <input autofocus type="text" id="search-input" placeholder="search ig?"
-        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-none">
-      <button type="submit" id="search-button" value="Search"
-        class="active:bg-red bg-red text-white cursor-pointer py-2 px-4 focus:outline-none material-icons text-[20px]">
+    <form id="search-container" class="flex flex-row items-center bg-gray text-white ">
+      <input autofocus type="text" id="search-input" placeholder="search ig?" tabindex="0" required
+        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-none focus:border-b-red focus:border-b-2">
+      <button type="submit" id="search-button" value="Search" tabindex="0"
+        class="active:bg-red bg-red text-white cursor-pointer py-[6px] px-4  material-icons text-[20px]">
         search
       </button>
     </form>
 
-    <button id="btn-next" class="bg-red text-white active:bg-red-hover py-2 px-4 focus:outline-none">
+    <button id="btn-next" class="bg-red text-white active:bg-red-hover py-2 px-4 focus:outline-none focus:underline ">
       next
     </button>
   </header>
