--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
   <script type="module" defer src="./src/js/app.ts"></script>
-  <link rel="stylesheet" href="./src/output.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./src/css/styles.css">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body class="min-h-screen bg-body text-white">
 
   <header class="sm:fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
-    <button id="btn-history" class="bg-red focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none">
+    <button id="btn-history"
+      class="bg-red focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined">
       history
     </button>
 
     <form id="search-container" class="flex flex-row items-center bg-gray text-white ">
       <input autofocus type="text" id="search-input" placeholder="search ig?" tabindex="0" required
-        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-none focus:border-b-red focus:border-b-2">
+        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-0 focus:border-b-red focus:border-b-2">
       <button type="submit" id="search-button" value="Search" tabindex="0"
-        class="active:bg-red bg-red text-white cursor-pointer py-[6px] px-4  material-icons text-[20px]">
+        class="active:bg-red bg-red text-white cursor-pointer py-[6px] px-4 material-symbols-outlined text-[20px] focus:outline-none focus:underline">
         search
       </button>
     </form>
 
-    <button id="btn-next" class="bg-red text-white active:bg-red-hover py-2 px-4 focus:outline-none focus:underline ">
-      next
+    <button id="btn-next"
+      class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined">
+      expand_more
     </button>
   </header>
 
@@ -49,9 +52,11 @@
 
     <div id="custom-seekbar"
       class="flex items-center justify-around bg-opacity-10 bg-gray w-full h-10 px-4 hover:border-red-hover">
-      <button id="track-prev" class="w-6 mr-2 material-icons text-gray-300">skip_previous</button>
-      <button id="play-pause" class="w-6 mr-2 material-icons text-gray-300">play_circle_outline</button>
-      <button id="track-next" class="w-6 mr-2 material-icons text-gray-300">skip_next</button>
+      <div class="flex mr-1">
+        <button id="track-prev" class="material-symbols-outlined scale-125">navigate_before</button>
+        <button id="play-pause" class="material-symbols-outlined">play_circle</button>
+        <button id="track-next" class="material-symbols-outlined scale-125">navigate_next</button>
+      </div>
       <div id="elapsed-time" class="">00:00</div>
       <input id="seekbar" type="range" min="0" value="0"
         class="relative h-1 bg-red w-full m-4 rounded-full cursor-pointer">
