--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
   <header class="sm:fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
     <button id="btn-history"
-      class="bg-red focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined">
+      class="bg-red sm:focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined hover:underline">
       history
     </button>
 
     <form id="search-container" class="flex flex-row items-center bg-gray text-white ">
       <input autofocus type="text" id="search-input" placeholder="search ig?" tabindex="0" required
-        class="pl-2 sm:pl-6 w-32 sm:w-72 py-2 bg-gray focus:outline-0 focus:border-b-red focus:border-b-2">
+        class="pl-6 w-32 h-10  sm:w-72 py-2 bg-gray focus:outline-0 focus:border-b-red focus:border-b-2 hover:border-b-red hover:border-b-2">
       <button type="submit" id="search-button" value="Search" tabindex="0"
-        class="active:bg-red bg-red text-white cursor-pointer py-[6px] px-4 material-symbols-outlined text-[20px] focus:outline-none focus:underline">
+        class="h-10 active:bg-red bg-red text-white cursor-pointer py-[6px] px-4 material-symbols-outlined text-[20px] focus:outline-none sm:focus:underline hover:underline">
         search
       </button>
     </form>
 
     <button id="btn-next"
-      class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined">
+      class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline">
       expand_more
     </button>
   </header>
@@ -39,7 +39,7 @@
     <div id="list-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
   </main>
-  <footer class="fixed bottom-0 border-t-2 border-red w-full bg-body px-8 py-3 flex items-center flex-col sm:flex-row">
+  <footer class="fixed bottom-0 border-t-2 border-red w-full bg-body px-8 py-1 flex items-center flex-col sm:flex-row">
 
     <div id="track-art" class="flex items-center sm:m-0 mb-1">
       <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
