--- a/index.html
+++ b/index.html
@@ -5,48 +5,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Saavn webMeister</title>
-  <script type="module" defer src="./src/js/app.ts"></script>
-  <link rel="stylesheet" href="./src/css/styles.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="./src/css/styles.css">
+  <script type="module" defer src="./src/js/app.ts"></script>
 </head>
 
 <body class="min-h-screen bg-body text-white">
 
-  <header class="sm:fixed top-0 z-10 w-full h-20 flex justify-between items-center bg-body px-8 border-red border-b-2">
-    <button id="btn-history"
-      class="bg-red sm:focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined hover:underline">
+  <header
+    class="px-6 sm:fixed sm:z-10 top-0 w-full h-20 flex justify-center items-center bg-body border-red border-b-2">
+    <button
+      class="btn-history h-10 bg-red sm:focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined hover:underline hidden sm:inline-block absolute left-8">
       history
     </button>
-
     <form id="search-container" class="flex flex-row items-center bg-gray text-white ">
-      <input autofocus type="text" id="search-input" placeholder="search ig?" tabindex="0" required
-        class="pl-6 w-32 h-10  sm:w-72 py-2 bg-gray focus:outline-0 focus:border-b-red focus:border-b-2 hover:border-b-red hover:border-b-2">
+      <input autofocus type="text" id="search-input" placeholder="search ig?" tabindex="0" required autocomplete="off"
+        class="pl-6 h-10 w-full py-2 bg-gray focus:outline-0 focus:border-b-red focus:border-b-2  hover:border-b-red hover:border-b-2 hover:pt-[10px] focus:pt-[10px]">
+
       <button type="submit" id="search-button" value="Search" tabindex="0"
         class="h-10 active:bg-red bg-red text-white cursor-pointer py-[6px] px-4 material-symbols-outlined text-[20px] focus:outline-none sm:focus:underline hover:underline">
         search
       </button>
     </form>
 
-    <button id="btn-next"
-      class="bg-red text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline">
-      expand_more
-    </button>
   </header>
 
 
-  <main class="p-6 sm:pt-[6.5rem] sm:pb-28 pb-40">
+  <main class="p-6 sm:pt-[6.5rem] sm:pb-28 pb-32 flex justify-center flex-col">
     <div id="list-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
+    <button id="btn-next"
+      class="bg-red mt-2 text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline ">
+      expand_more
+    </button>
   </main>
-  <footer class="fixed bottom-0 border-t-2 border-red w-full bg-body px-8 py-1 flex items-center flex-col sm:flex-row">
+  <footer class="fixed bottom-0 border-t-2 border-red w-full bg-body px-8 py-1 flex items-center flex-col sm:flex-row ">
+    <div class="phone:w-full py-1">
+      <button
+        class="sm:hidden absolute right-8 top-5 btn-history h-10 bg-red sm:focus:underline text-white active:bg-red-hover py-2 px-3 focus:outline-none material-symbols-outlined hover:underline">
+        history
+      </button>
 
-    <div id="track-art" class="flex items-center sm:m-0 mb-1">
-      <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
-        class="w-16 mr-4">
-      <div id="track-metadata" class="sm:mr-24">
-        <h3 class="text-lg font-semibold underline">Tujhe Bhula Diya</h3>
-        <p class="w-44 text-gray-txt">Mohit Chauhan, Pritam, Sunidhi Chauhan</p>
+      <div id="track-art" class="flex items-center sm:m-0 mb-1">
+        <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
+          class="w-[4.25rem] mr-4 border-2 border-red">
+        <div id="track-metadata" class="sm:mr-24">
+          <h3 class="text-lg font-bold">Tujhe Bhula Diya</h3>
+          <p class="w-44 text-gray-txt">Mohit Chauhan, Pritam, Sunidhi Chauhan</p>
+        </div>
       </div>
     </div>
 
