fix: minor css fixes

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   </header>
 
 
-  <main class="p-6 sm:pt-[6.5rem] sm:pb-28 pb-32 flex justify-center flex-col">
+  <main class="p-6 sm:pt-[6.5rem] sm:pb-24 flex justify-center flex-col">
     <div id="list-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
     <button id="btn-next"
-      class="bg-red mt-2 text-white active:bg-red-hover py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline ">
+      class="bg-red mt-2 text-white active:bg-red-hover phone:mb-[7.5rem] py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline">
       expand_more
     </button>
   </main>
@@ -49,12 +49,14 @@
 
       <div id="track-art" class="flex items-center sm:m-0 mb-1">
         <img src="https://c.saavncdn.com/113/Anjaana-Anjaani-Hindi-2010-20221211111152-150x150.jpg" alt=""
-          class="w-[4.25rem] mr-4 border-2 border-red">
+          class="w-[4.25rem] mr-4">
         <div id="track-metadata" class="sm:mr-24">
-          <h3 class="text-lg font-bold">Tujhe Bhula Diya</h3>
+          <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden overflow-ellipsis w-44">Tujhe Bhula Diya
+          </h3>
           <p class="w-44 text-gray-txt">Mohit Chauhan, Pritam, Sunidhi Chauhan</p>
         </div>
       </div>
+
     </div>
 
     <div id="custom-seekbar"
