refactor: custom setter for tracking now playing

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="p-6 sm:pt-[6.5rem] sm:pb-24 flex justify-center flex-col">
     <div id="list-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-4 transition-all"></div>
     <div id="history-container" class=""></div>
-    <button id="btn-next"
+    <button id="btn-load-next"
       class="bg-red mt-2 text-white active:bg-red-hover phone:mb-[7.5rem] py-2 px-3 focus:outline-none focus:underline material-symbols-outlined hover:underline">
       expand_more
     </button>
